--- a/Index.html
+++ b/Index.html
@@ -3,34 +3,44 @@
 <head>
     <title>Printalyst</title>
 </head>
-<background>
-    <div class = "triangle1"></div>
-    <div class = "triangle2"></div>
-    <div class = "triangle3"></div>
-</background>
 <body>
     <div class = "a">
         <h1>Printalyst</h1>
     </div>
+    <div class = "triangle1"></div>
     <flowers>
-        <img src = "assets/FlowersNearNamepng"
+        <img src = "assets/FlowersNearName.png" alt ="threeflowers">
     </flowers>
     <div class = "b">
         <p>Printalyst is aims to make 3D printing accessible for underprivileged or remote people. </p>
     </div>
+    <3DPrinter>
+        <img src = "assets/3DPrinter.png" alt = "3DPrinter">
+    </3DPrinter>
+    <butterfly>
+        <img src = "assets/Butterfly.png" alt = "butterfly">
+    </butterfly>
     <div class = "c">
         <p>Filler text</p>
     </div>
+    <city>
+        <img src = "assets/City.png" alt = "city">
+    </city>
+    <div class = "triangle2"></div>
     <div class = "d">
         <p>To be eligible, you have to explain efforts you took to find public access printers such as looking for local libraries, makerspaces, and fab labs.</p>
     </div>
     <div class = "e">
-        <p>We directly provide free 3D printing for underprivileged youth.
-            We also provide 3D printers to public access spaces to help manage costs, especially internationally.</p>
+        <li>We directly provide free 3D printing for underprivileged youth.</li>
+        <li>We also provide 3D printers to public access spaces to help manage costs, especially internationally.</li>
     </div>
     <div class = "f">
         <p>Submit it here</p>
     </div>
+    <bottomFlower>
+        <img src = "assets/BottomFlower.png" alt = "flower">
+    </bottomFlower>
+    <div class = "triangle3"></div>
     
 </body>
 <style>
@@ -55,10 +65,20 @@
         color: rgb(251, 220, 217);
         text-align: triangle1;
     }
+    div.d
+    {
+        color:#3d376b;
+        text-align: triangle2;
+    }
     div.e
     {
         color: rgb(251, 220, 217);
-        text-align: right;
+        text-align: center;
+    }
+    div.f
+    {
+        color: #3d376b;
+
     }
     .triangle1{
         width: 0;
@@ -83,7 +103,7 @@
         height: 0;
 
         border-top: 100px solid transparent;
-        border-bottom: 100px solid transparent;
+        border-bottom: 200px solid transparent;
         border-left: 1200px solid #fbdcb9;
         transform: rotate(18deg);
     }
