--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang  = "en">
 <head>
     <title>Printalyst</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class = "a">
@@ -9,7 +10,7 @@
     </div>
     <div class = "triangle1"></div>
     <flowers>
-        <img src = "assets/FlowersNearName.png" alt ="threeflowers">
+        <img src = "assets/flower-icon.svg" alt ="threeflowers">
     </flowers>
     <div class = "b">
         <p>Printalyst is aims to make 3D printing accessible for underprivileged or remote people. </p>
@@ -41,42 +42,3 @@
     <div class = "triangle3"></div>
     
 </body>
-<style>
-    body{
-        
-        background-color: rgb(134, 129, 189);
-    }
-    div.a
-    {
-        font-family: sans-serif;
-        font-weight: bold;
-        color: white;
-        text-align: center;
-    }
-    div.b
-    {
-        text-align: triangle1;
-        color: #3d376b;
-    }
-    div.c
-    {
-        color: rgb(251, 220, 217);
-        text-align: triangle1;
-    }
-    div.d
-    {
-        color:#3d376b;
-        text-align: triangle2;
-    }
-    div.e
-    {
-        color: rgb(251, 220, 217);
-        text-align: center;
-    }
-    div.f
-    {
-        color: #3d376b;
-
-    }
-   
-</style>
