--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
     <div class = "a">
         <h1>Printalyst</h1>
     </div>
-    <div class = "triangle1"></div>
     <flowers>
         <img src = "assets/flower-icon.svg" alt ="threeflowers">
     </flowers>
-    <div class = "b">
-        <p>Printalyst is aims to make 3D printing accessible for underprivileged or remote people. </p>
-    </div>
-    <3DPrinter>
-        <img src = "assets/3DPrinter.png" alt = "3DPrinter">
-    </3DPrinter>
+    <div style = "width: 100%; height: 10em; background-color: #ddd4d4"; <p>Printalyst aims to make 3D printing accessible for underprivileged or remote people.</p><img src = "assets/3DPrinter.png" alt = "3DPrinter">></div>
+
     <butterfly>
         <img src = "assets/Butterfly.png" alt = "butterfly">
     </butterfly>
@@ -33,9 +28,7 @@
         <li>We directly provide free 3D printing for underprivileged youth.</li>
         <li>We also provide 3D printers to public access spaces to help manage costs, especially internationally.</li>
     </div>
-    <div class = "f">
-        <p>Submit it here</p>
-    </div>
+    <div style = "width: 100%; height: 10em; background-color: #fbdcd9"; <p>Submit it here</p>></div>
     <bottomFlower>
         <img src = "assets/BottomFlower.png" alt = "flower">
     </bottomFlower>
