--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
 </head>
 <body>
     <div class = "a">
-        <h1>Printalyst</h1>
+        <h1>Printalyst <img src = "assets/flower-icon.svg";  height = 40em; alt ="threeflowers"></h1>
     </div>
-    <flowers>
-        <img src = "assets/flower-icon.svg";  height = 80em; alt ="threeflowers">
-    </flowers>
-    <div style = "width: 100%; height: 10em; background-color: #ddd4d4"; <p>Printalyst aims to make 3D printing accessible for underprivileged or remote people.</p>;<img src = "assets/3DPrinter.png"; height = 80%; alt = "3DPrinter">></div>
+    <div style = "width: 100%; height: 10em; background-color: #ddd4d4"; <p>Printalyst aims to make 3D printing accessible for underprivileged or remote people.</p>;<img src = "assets/3DPrinter.png"; height = 80%; align = "right"; alt = "3DPrinter">></div>
 
     <butterfly>
         <img src = "assets/Butterfly.png" alt = "butterfly">
     </butterfly>
     <div class = "c">
-        <p>Filler text</p>
+        <p>Butterflies are fun</p>
     </div>
     
 
@@ -28,10 +25,9 @@
         <li>We directly provide free 3D printing for underprivileged youth.</li>
         <li>We also provide 3D printers to public access spaces to help manage costs, especially internationally.</li>
     </div>
-    <div style = "width: 100%; height: 10em; background-color: #fbdcd9"; <p>Submit it here</p>></div>
-    <bottomFlower>
-        <img src = "assets/BottomFlower.png" alt = "flower">
+    <div style = "width: 100%; height: 10em; background-color: #fbdcd9"; <p>Submissions coming soon!</p>></div>
+    <bottomFlower></bottomFlower>
+        <img src = "assets/BottomFlower.png"; height = 30em; align = "right" alt = "flower">
     </bottomFlower>
-    <div class = "triangle3"></div>
     
 </body>
